# Introducao_ORM_SQLAlchemy

./: .env_example  README.md  pyproject.toml
src/: main.py
